<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/attentionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Attention!!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/rulesLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/attentionText"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instructionsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kindly read the following rules before you proceed - "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <!-- Rule 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="1."
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:text="@string/rule_1"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--Rule 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="2."
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:text="@string/rule_2"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--Rule 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="3."
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:text="@string/rule_3"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--Rule 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="4."
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:text="@string/rule_4"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rulesLL"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#7d72ec"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="CANCEL"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rulesLL"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#7d72ec"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/okButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="OK"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>